--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/philippsimon/hbbtv-typings#readme",
   "scripts": {
+    "postversion": "git push && git push --tags",
     "test": "npm run build && npm run tslint",
     "tslint": "tslint --project tsconfig.json --config tslint.json --type-check",
     "build": "tsc"
