change name to hbbtv-typings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@types/hbbtv",
+  "name": "hbbtv-typings",
   "version": "1.5.1",
   "description": "Typings for HbbTV 1.5 (TS 102 796 V1.2.1)",
   "keywords": [
