--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "scripts": {
     "postversion": "git push && git push --tags",
     "test": "npm run build && npm run tslint",
-    "tslint": "tslint --project tsconfig.json --config tslint.json --type-check",
+    "tslint": "tslint --project tsconfig.json --config tslint.json",
     "build": "tsc"
   },
   "devDependencies": {
-    "tslint": "^5.7.0",
-    "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "^2.5.2"
+    "dtslint": "^0.3.0",
+    "tslint": "^5.10.0",
+    "tslint-microsoft-contrib": "^5.0.3",
+    "typescript": "^2.9.2"
   }
 }
