--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hbbtv-typings",
+  "name": "@digital-uk/hbbtv-typings",
   "version": "1.5.2",
   "description": "Typings for HbbTV 1.5 (TS 102 796 V1.2.1)",
   "keywords": [
@@ -11,16 +11,19 @@
     "declaration"
   ],
   "private": false,
-  "author": "philippsimon",
+  "author": "Digital UK",
+  "contributors": [
+    "philippsimon"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/philippsimon/hbbtv-typings.git"
+    "url": "git+https://github.com/Digital-UK/hbbtv-typings.git"
   },
   "bugs": {
-    "url": "https://github.com/philippsimon/hbbtv-typings/issues"
+    "url": "https://github.com/Digital-UK/hbbtv-typings/issues"
   },
-  "homepage": "https://github.com/philippsimon/hbbtv-typings#readme",
+  "homepage": "https://github.com/Digital-UK/hbbtv-typings#readme",
   "scripts": {
     "postversion": "git push && git push --tags",
     "test": "npm run build && npm run tslint",
