--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hbbtv-typings",
+  "name": "@digital-uk/hbbtv-typings",
   "version": "1.5.2",
   "description": "Typings for HbbTV 1.5 (TS 102 796 V1.2.1)",
   "keywords": [
@@ -11,7 +11,7 @@
     "declaration"
   ],
   "private": false,
-  "author": "philippsimon",
+  "author": "Digital UK/philippsimon",
   "license": "MIT",
   "repository": {
     "type": "git",
