--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "type": "git",
     "url": "git+https://github.com/Digital-UK/hbbtv-typings.git"
   },
+  "types": "index.d.ts",
   "bugs": {
     "url": "https://github.com/Digital-UK/hbbtv-typings/issues"
   },
