--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,38 +5,42 @@ on:
   release:
     types: [created]
 
-env:
-  CACHE_NAME: ci
-
 jobs:
   package:
     name: "Package & Push to GitHub Packages"
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
     steps:
       - name: "Setup - Checkout"
-        uses: actions/checkout@v2.3.4
-      
-      - name: "Setup - Use Node.js ${{ matrix.node-version }}"
-        uses: actions/setup-node@v2.1.5
+        uses: actions/checkout@v3
+
+      - name: "Check for .nvmrc"
+        run: |
+          if [[ ! -f .nvmrc ]]; then
+            echo "14" > .nvmrc
+          fi
+
+      - name: "Setup - Use Node.js (from .nvmrc)"
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version-file: '.nvmrc'
+          cache: 'npm'
           registry-url: 'https://npm.pkg.github.com'
-      
-      - name: "Cache node modules"
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-modules-${{ env.CACHE_NAME }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-${{ env.CACHE_NAME }}-
-      
+          scope: '@digital-uk'
+          always-auth: true
+
+      # Skip post-install scripts here, as a malicious
+      # script could steal NODE_AUTH_TOKEN.
       - name: "Install dependencies"
         id: install_deps
-        run: npm ci
-      
+        run: npm ci --ignore-scripts
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.ORG_GITHUB_ACTIONS_TOKEN }}
+
+      # `npm rebuild` will run all those post-install scripts for us.
+      - name: "Setup dependencies"
+        id: setup_deps
+        run: npm rebuild && npm run prepare --if-present
+
       - name: "Publish"
         run: npm publish
         env:
